<resources>
    <string name="app_name">Kakasualan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nama_sepatu">Adidas Samba</string>
    <string name="deskripsi_samba">Adidas Samba is an athletic shoe manufactured by German multinational Adidas. It is among Adidas most popular shoes, being the second highest selling Adidas design ever with over 35 million pairs sold worldwide, behind the Stan Smith model. It has been produced in a variety of color schemes, yet the original black with three white stripes is by far the most popular. The shoe features a tan gumsole that distinguishes it from other Adidas shoes.</string>
    <string name="deskripsi_cortez">Nike Cortez is one of the Nike shoe product series created by Bill Bowerman and Phil Knight in 1972. Nike Cortez shoes were originally made because of the lack of choice of sports shoe products on the market that are comfortable and durable, especially for long distance running needs.The presence of Nike Cortez shoes itself further solidified Nike move into the sports shoe and clothing industry. Along with its release at the 1972 Summer Olympics, many people began to be interested and use this one shoe product.</string>
    <string name="deskripsi_suede">Puma Suede has had a profound influence on society and culture. From Tommie Smiths prowess in the 1968 Olympics, to Walt "Cycle" Frazier on the basketball court in the 1970s, to the b-boys of New York in the 1980s. Suede was worn by icons from every generation and remains an icon to this day.</string>
    <string name="deskripsi_nbxsi">Stone Island’s command of the timeless and the unexpected is perfectly expressed with their new, collaborative take on the 574 Legacy silhouette. This familiar yet different update to the classic 574 features a subtly streamlined and modernized build, and premium materials. Stone Island puts a signature stamp on the 574 Legacy, with a design informed by their extensive use of military influences.</string>
    <string name="deskripsi_mexico66">Introducing the MEXICO 66 SD, a model reinvented with elements inherited from our iconic MEXICO 66 shoe including the Onitsuka Tiger Stripes, a thin sole and the cross parts of the heel that represent Onitsuka Tiger and its rich history. The soft, elegant leather delivers a refined silhouette and further pursues comfort. The slim shoelaces and metal eyelets also create an elegant impression. </string>
    <string name="tag_harga">Price :</string>
    <string name="harga_samba">US$ 100.00</string>
    <string name="harga_cortez">US$ 145.00</string>
    <string name="harga_suede">US$ 139.00</string>
    <string name="harga_nbxsi">US$ 260.00</string>
    <string name="harga_mexico66">US$ 113.51</string>
    <string name="button">Buy Now !</string>

</resources>